<package>
  <name>inverse_kinematics</name>
  <version>1.0.0</version>
  <description>This package contains the components of the inverse_kinematics package</description>
  <maintainer email="unknown@maintainer.com">Unknown Author</maintainer>

  <license>Unknown</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author>Unknown Author</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rosconsole</build_depend>
  <run_depend>rosconsole</run_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>

  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>orogen</build_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>orocos_kdl</run_depend>

  <export>

  </export>
</package>
